# vitejte_postgresql

./: CMakeLists.txt  DeviceFinder.cpp  DeviceFinder.h  Service.cpp  Service.h  global_logger.h  list_devices.cpp  list_devices.h  main.cpp  savers.cpp  savers.h  utils.h
include/pqxx/: Makefile  config-internal-autotools.h  config-internal-compiler.h  config-private-autotools.h  config-private-compiler.h  config-private-libpq.h  config-public-compiler.h  config.h
lib_interface/: Communicator.cpp  Communicator.h  Finally.h  LibInterface.h  VitejteLibTypes.h
libs/: config.toml
